--- a/package.json
+++ b/package.json
@@ -2,21 +2,42 @@
   "name": "@orders-app/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "nx run-many --target=serve --projects=client,api --parallel",
+    "build": "nx run-many --target=build --projects=client,api",
+    "start:client": "nx serve client",
+    "start:api": "nx serve api",
+    "build:client": "nx build client",
+    "build:api": "nx build api",
+    "lint": "nx run-many --target=lint --projects=client,api",
+    "test": "nx run-many --target=test --projects=client,api"
+  },
   "private": true,
   "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-router-dom": "6.29.0"
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "antd": "^5.24.6",
+    "axios": "^1.6.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "6.29.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/eslint": "20.7.2",
     "@nx/eslint-plugin": "20.7.2",
     "@nx/js": "20.7.2",
+    "@nx/nest": "^20.7.2",
+    "@nx/node": "20.7.2",
     "@nx/react": "20.7.2",
     "@nx/vite": "20.7.2",
     "@nx/web": "20.7.2",
+    "@nx/webpack": "20.7.2",
     "@nx/workspace": "20.7.2",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
@@ -42,7 +63,8 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
-    "vitest": "^3.0.0"
+    "vitest": "^3.0.0",
+    "webpack-cli": "^5.1.4"
   },
   "workspaces": [
     "apps/*"
