--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "antd": "^5.24.6",
     "axios": "^1.6.0",
+    "eslint-plugin-jsdoc": "^50.6.9",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "6.29.0",
@@ -29,8 +33,8 @@
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nx/eslint": "20.7.2",
-    "@nx/eslint-plugin": "20.7.2",
+    "@nx/eslint": "^20.7.2",
+    "@nx/eslint-plugin": "^20.7.2",
     "@nx/js": "20.7.2",
     "@nx/nest": "^20.7.2",
     "@nx/node": "20.7.2",
@@ -46,18 +50,25 @@
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-gtm-module": "^2.0.4",
+    "@types/react-helmet": "^6.1.11",
+    "@types/sanitize-html": "^2.15.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^3.0.0",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^10.0.0",
-    "eslint-plugin-import": "2.31.0",
-    "eslint-plugin-jsx-a11y": "6.10.1",
-    "eslint-plugin-react": "7.35.0",
-    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-json": "^4.0.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-mdx": "^3.4.0",
+    "eslint-plugin-prettier": "^5.2.6",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "20.7.2",
-    "prettier": "^2.6.2",
+    "prettier": "^3.5.3",
     "sass": "^1.55.0",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
