--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -5,6 +5,12 @@
   "references": [
     {
       "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "esModuleInterop": true
+  }
 }
