setup geolocation and order

--- a/apps/api/.env
+++ b/apps/api/.env
@@ -1,2 +1,10 @@
-MONGO_URI=mongodb://localhost:27017/dev-db
+# MongoDB Connection
+MONGODB_URI=mongodb://localhost:27017/pizza-orders
+
+# Server Configuration
 PORT=3000
+HOST=localhost
+
+# Secret Settings
+JWT_SECRET=your_jwt_secret_key
+JWT_EXPIRATION=1d
