--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "antd": "^5.24.6",
-    "axios": "^1.6.0",
     "eslint-plugin-jsdoc": "^50.6.9",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
@@ -65,6 +67,8 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-mdx": "^3.4.0",
     "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "20.7.2",
