chore: project wrap up

--- a/apps/api/.env
+++ b/apps/api/.env
@@ -1,10 +1,14 @@
 # MongoDB Connection
 MONGODB_URI=mongodb://localhost:27017/pizza-orders
+USE_IN_MEMORY_DB=true
+
+# Enable database seeding
+SEED_DB=true
 
 # Server Configuration
 PORT=3000
 HOST=localhost
 
-# Secret Settings
-JWT_SECRET=your_jwt_secret_key
+# Other Settings
+JWT_SECRET=jwt_secret_key
 JWT_EXPIRATION=1d
