--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,9 +1,24 @@
 {
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "allowJs": false,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "strict": true,
+    "types": ["vite/client", "vitest"]
+    //    "paths": {
+    //      "@/*": ["./src/*"]
+    //    }
+  },
   "files": [],
   "include": [],
   "references": [
     {
       "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
     }
   ],
   "extends": "../../tsconfig.base.json"
