--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nx run-many --target=serve --projects=client,api --parallel",
-    "build": "nx run-many --target=build --projects=client,api",
+    "dev": "npm run build:api && npm run start:all",
+    "start:all": "nx run-many --target=serve --projects=api,client --parallel",
     "start:client": "nx serve client",
     "start:api": "nx serve api",
+    "build:all": "nx run-many --target=build --projects=types,api,client",
     "build:client": "nx build client",
     "build:api": "nx build api",
-    "lint": "nx run-many --target=lint --projects=client,api",
-    "test": "nx run-many --target=test --projects=client,api"
+    "build:types": "nx build types",
+    "lint:all": "nx run-many --target=lint --projects=api,client,types",
+    "test:all": "nx run-many --target=test --projects=api,client",
+    "seed": "nx run api:serve --args=\"--seed\"",
+    "clean": "nx reset",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docker:clean": "docker-compose down -v"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +31,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "antd": "^5.24.6",
+    "axios": "^1.8.4",
     "eslint-plugin-jsdoc": "^50.6.9",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
@@ -29,7 +39,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "6.29.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -71,13 +82,17 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "mongodb-memory-server": "^10.1.4",
     "nx": "20.7.2",
     "prettier": "^3.5.3",
+    "rollup-plugin-visualizer": "^5.14.0",
     "sass": "^1.55.0",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.0",
     "webpack-cli": "^5.1.4"
   },
